// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/things has a default state 1`] = `
Object {
  "loadedThings": Array [],
  "selectedThing": null,
}
`;

exports[`reducers/things reduces THING_SELECTED 1`] = `
Object {
  "loadedThings": Array [],
  "selectedThing": "foo",
}
`;

exports[`reducers/things reduces THINGS_UPDATED 1`] = `
Object {
  "loadedThings": Array [
    "foo",
    "bar",
  ],
  "selectedThing": null,
}
`;

exports[`reducers/things reduces nothing 1`] = `
Object {
  "loadedThings": Array [],
  "selectedThing": null,
}
`;

exports[`reducers/things selects and deselects a thing 1`] = `
Object {
  "loadedThings": Array [],
  "selectedThing": "foo",
}
`;

exports[`reducers/things selects and deselects a thing 2`] = `
Object {
  "loadedThings": Array [],
  "selectedThing": null,
}
`;
